// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttentionPlugin Changed dependencies 1`] = `
Array [
  Array [
    3,
    "- Bumped **test**  from \`1.0.0\` to \`1.1.0\`",
  ],
]
`;

exports[`AttentionPlugin Changed license 1`] = `
Array [
  Array [
    1,
    "Source code now under \`MIT\` license.",
  ],
]
`;
